--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -36,12 +36,34 @@
         android:layout_column="0"
         android:layout_row="3" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/txt_settings_cleardb"
-        android:id="@+id/button"
-        android:layout_column="0"
-        android:layout_row="4" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_row="4"
+        android:layout_column="0">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_settings_deletedb"
+            android:id="@+id/button_deletedb"
+            android:layout_weight="1" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_settings_exportdb"
+            android:id="@+id/button_exportdb"
+            android:layout_weight="1" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_settings_importdb"
+            android:id="@+id/button_importdb"
+            android:layout_weight="1" />
+
+    </LinearLayout>
 
 </GridLayout>
